js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/callexpression-arguments.js
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
(
)
;
}
'
empty
arguments
'
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
(
1
)
;
}
'
arguments
with
trailing
comma
'
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
(
1
2
)
;
}
'
2
arguments
'
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
(
.
.
.
[
]
)
;
}
'
spread
args
'
)
;
reportCompare
(
0
0
)
;
