js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
